fix(project): 카테고리 계층을 조상/하위 전체로 다루도록 수정
- CategoryHierarchy(category/domain) 추가 — path/withDescendants/rootId를
  한곳에서 계산. 순환 참조 방어 포함
- 카테고리 필터(?categoryId=)가 하위 카테고리까지 포함 (#761)
- categoryVector 임베딩 계층 문자열이 루트까지 조상 전체 반영 (#765)
  색인(ProjectSearchAdapter)/질의(CategoryIntentResolver) 양쪽 동일하게 수정
- 세 곳에 중복돼 있던 withDescendants BFS / 계층 문자열 조립 제거

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01QuUzVrsuxqZt24TiJwn74p